clutter: Add ClutterSeat object
This object will take most responsibilities away from ClutterDeviceManager,
with the peculiarity that it'll express the per-seat device tree.

https://gitlab.gnome.org/GNOME/mutter/merge_requests/852

--- a/clutter/clutter/meson.build
+++ b/clutter/clutter/meson.build
@@ -70,6 +70,7 @@ clutter_headers = [
   'clutter-script.h',
   'clutter-scriptable.h',
   'clutter-scroll-actor.h',
+  'clutter-seat.h',
   'clutter-settings.h',
   'clutter-shader-effect.h',
   'clutter-shader-types.h',
@@ -161,6 +162,7 @@ clutter_sources = [
   'clutter-script-parser.c',
   'clutter-scriptable.c',
   'clutter-scroll-actor.c',
+  'clutter-seat.c',
   'clutter-settings.c',
   'clutter-shader-effect.c',
   'clutter-shader-types.c',
