--- a/clutter/clutter/meson.build
+++ b/clutter/clutter/meson.build
@@ -20,6 +20,7 @@ clutter_headers = [
   'clutter-canvas.h',
   'clutter-child-meta.h',
   'clutter-click-action.h',
+  'clutter-clock-driver.h',
   'clutter-clone.h',
   'clutter-color-static.h',
   'clutter-color.h',
@@ -108,6 +109,7 @@ clutter_sources = [
   'clutter-canvas.c',
   'clutter-child-meta.c',
   'clutter-click-action.c',
+  'clutter-clock-driver.c',
   'clutter-clone.c',
   'clutter-color.c',
   'clutter-colorize-effect.c',
